<resources>
    <string name="app_name">ADMIN</string>
    <string name="value">none</string>
    <string name="campo_vacio">vacio</string>
    <string name="splash_name">La mejor comida para ti</string>
    <string name="user_email">correo</string>
    <string name="user_contrs">contraseña</string>
    <string name="user_contrs2">repetir contraseña</string>
    <string name="sign_out_menu">SALIR</string>
    <string name="sign_out">NO TE VAYAS! :(</string>
    <string name="sign_in">Hola! </string>
    <string name="save_usr">GUARDAR</string>
    <string name="photo_selec">Selecciona una foto: </string>
    <string name="photo_ok">Foto seleccionada </string>
    <string name="photo_no_ok">Foto no seleccionada </string>
    <string name="photo_error">No se pudo mostrar la imagen </string>
    <string name="save_item_ok">PRODUCTO AGREGADO! </string>
    <string name="save_item_no_ok">NO SE PUDO AGREGAR! </string>
    <string name="delete_item_ok">PRODUCTO ELIMINADO! </string>
    <string name="delete_item_no_ok">NO SE PUDO ELIMINAR! </string>
    <string name="item_no_found">PRODUCTO NO ENCONTRADO! </string>
    <string name="item_found">PRODUCTO ENCONTRADO! </string>
    <string name="item_wait">Estamos buscando! </string>
    <string name="main_msg">¿Que deseas hacer?</string>
    <string name="add">AGREGAR</string>
    <string name="edit">MODIFICAR</string>
    <string name="delete">ELIMINAR</string>
    <string name="look">BUSCAR</string>
    <string name="perfil">VER PERFIL</string>
    <string name="perfil_data">DATOS PERFIL</string>
    <string name="perfil_ok">Datos actualizados</string>
    <string name="perfil_no_ok">Debe completar los campos</string>
    <string name="perfil_cancel">Sin cambios</string>
    <string name="general_ok">Guardar Cambios</string>
    <string name="general_no_ok">Cancelar</string>
    <string name="toast_ingredientes_ok">Ingredientes agregados</string>
    <string name="toast_ingredientes_empty">No agrego ningun ingrediente</string>
    <string name="table">TABLA NUTRICIONAL</string>
    <string name="table_propiedad_1">CALORIAS: </string>
    <string name="table_propiedad_2">AZUCAR: </string>
    <string name="table_propiedad_3">SODIO: </string>
    <string name="item">INFORMACION EXTRA</string>
    <string name="item_0">NOMBRE: </string>
    <string name="item_1">INGREDIENTES: </string>
    <string name="item_2">FABRICANTE: </string>
    <string name="item_3">GRAMAJE: </string>
    <string name="item_4">LINEA DE ATENCION: </string>
    <string name="item_5">PRODUCTO: </string>
    <string name="item_6">EMPAQUE: </string>
    <string name="item_7">CONSERVANTES: </string>
    <string name="item_8">SABOR: </string>
    <string name="item_9">APTO PARA: </string>
    <string name="name_pro">nombre del producto </string>
    <string name="upload_img_pro">Foto Producto </string>
    <string name="upload_img_nut">Foto Nutricional </string>
    <string-array name="categoria1">
        <item>ESCOGER</item>
        <item>LIQUIDOS</item>
        <item>SECOS</item>
        <item>MIXTOS</item>
    </string-array>
    <string-array name="categoria2">
        <item>ESCOGER</item>
        <item>ALIMENTOS</item>
        <item>COMPLEMENTOS</item>
        <item>SUMPLEMENTOS</item>
    </string-array>
    <string-array name="suplemento">
        <item>ESCOGER</item>
        <item>nutriente</item>
        <item>multi-nutriente</item>
    </string-array>
    <string-array name="tag_suplemento">
        <item>NUTRIENTE</item>
        <item>MULTINUTRIENTE</item>
    </string-array>
    <string-array name="child_suplementos">
        <item>/NUTRIENTE</item>
        <item>/MULTINUTRIENTE</item>
    </string-array>
    <string-array name="alimento_liquidos">
        <item>ESCOGER</item>
        <item>gaseosa</item>
        <item>jugo</item>
        <item>lacteo</item>
        <item>refresco</item>
        <item>otro</item>
    </string-array>
    <string-array name="tag_alimento_liquidos">
        <item>GASEOSAS</item>
        <item>JUGOS</item>
        <item>LACTEOS</item>
        <item>REFRESCO</item>
        <item>OTRO</item>
    </string-array>
    <string-array name="child_liquidos_alimentos">
        <item>/GASEOSAS</item>

        <item>/JUGOS/LISTO</item>
        <item>/JUGOS/POLVO</item>
        <item>/JUGOS/PULPA</item>

        <item>/LACTEOS/POLVO/ENTERA</item>
        <item>/LACTEOS/POLVO/DESCREMADA/CONLACTOSA</item>
        <item>/LACTEOS/POLVO/DESCREMADA/SINLACTOSA</item>
        <item>/LACTEOS/POLVO/SEMIDESCREMADA/CONLACTOSA</item>
        <item>/LACTEOS/POLVO/SEMIDESCREMADA/SINLACTOSA</item>

        <item>/LACTEOS/LIQUIDO/ENTERA</item>
        <item>/LACTEOS/LIQUIDO/DESCREMADA/CONLACTOSA</item>
        <item>/LACTEOS/LIQUIDO/DESCREMADA/SINLACTOSA</item>
        <item>/LACTEOS/LIQUIDO/SEMIDESCREMADA/CONLACTOSA</item>
        <item>/LACTEOS/LIQUIDO/SEMIDESCREMADA/SINLACTOSA</item>

        <item>/REFRESCO/POLVO</item>
        <item>/REFRESCO/LIQUIDO</item>

        <item>/OTRO</item>
    </string-array>
    <string-array name="alimento_secos">
        <item>ESCOGER</item>
        <item>condimento/especie</item>
        <item>endulzante</item>
        <item>frutos secos</item>
        <item>grano</item>
        <item>panaderia</item>
        <item>reposteria</item>
        <item>sal</item>
        <item>semilla</item>
        <item>snack</item>
        <item>otro</item>
    </string-array>
    <string-array name="tag_alimento_secos">
        <item>CONDIMENTO</item>
        <item>ENDULZANTE</item>
        <item>FRUTOS-SECOS</item>
        <item>GRANOS</item>
        <item>PANADERIA</item>
        <item>REPOSTERIA</item>
        <item>SAL</item>
        <item>SEMILLA</item>
        <item>SNACK</item>
        <item>OTRO</item>
    </string-array>
    <string-array name="child_secos_alimentos">
        <item>/CONDIMENTO/ARTIFICIAL</item>
        <item>/CONDIMENTO/NATURAL</item>

        <item>/ENDULZANTE/CALORICO</item>
        <item>/ENDULZANTE/NOCALORICO</item>

        <item>/FRUTOS-SECOS</item>

        <item>/GRANOS/ENTERO</item>
        <item>/GRANOS/PARVOLIZADO</item>
        <item>/GRANOS/REFINADO</item>

        <item>/PANADERIA</item>

        <item>/REPOSTERIA</item>

        <item>/SAL</item>

        <item>/SEMILLA</item>

        <item>/SNACK/FRITO</item>
        <item>/SNACK/HORNEADO</item>

        <item>/OTRO</item>
    </string-array>
    <string-array name="alimento_mixtos">
        <item>ESCOGER</item>
        <item>carne</item>
        <item>embutido</item>
        <item>frutoS</item>
        <item>queso</item>
        <item>salsa</item>
        <item>vegetableS</item>
        <item>otro</item>
    </string-array>
    <string-array name="tag_alimento_mixtos">
        <item>CARNES</item>
        <item>EMBUTIDOS</item>
        <item>FRUTOS</item>
        <item>QUESOS</item>
        <item>SALSAS</item>
        <item>VEGETABLES</item>
        <item>OTRO</item>
    </string-array>
    <string-array name="child_mixtos_alimentos">
        <item>/CARNES/CONSERVA</item>
        <item>/CARNES/FRESCA</item>
        <item>/CARNES/MADURADA</item>

        <item>/EMBUTIDOS/CONSERVA</item>
        <item>/EMBUTIDOS/MADURADO</item>
        <item>/EMBUTIDOS/OTRO</item>

        <item>/FRUTOS/CONSERVA</item>
        <item>/FRUTOS/FRESCO</item>

        <item>/QUESOS/FRESCO</item>
        <item>/QUESOS/MADURADO</item>

        <item>/SALSAS</item>

        <item>/VEGETABLES/CONSERVA</item>
        <item>/VEGETABLES/FRESCO</item>

        <item>/OTRO/CONSERVA</item>
        <item>/OTRO/LISTO</item>
        <item>/OTRO/FRESCO</item>
    </string-array>
    <string-array name="liquidos_sub1">
        <item>ESCOGER</item>
        <item>liquido</item>
        <item>polvo</item>
    </string-array>
    <string-array name="tag_liquidos_sub1">
        <item>LIQUIDO</item>
        <item>POLVO</item>
    </string-array>
    <string-array name="jugos">
        <item>listo</item>
        <item>polvo</item>
        <item>pulpa</item>
    </string-array>
    <string-array name="tag_jugos">
        <item>LISTO</item>
        <item>POLVO</item>
        <item>PULPA</item>
    </string-array>
    <string-array name="condimento">
        <item>ESCOGER</item>
        <item>artificial</item>
        <item>natural</item>
    </string-array>
    <string-array name="tag_condimento">
        <item>ARTIFICIAL</item>
        <item>NATURAL</item>
    </string-array>
    <string-array name="endulzante">
        <item>ESCOGER</item>
        <item>calorico</item>
        <item>no calorico</item>
    </string-array>
    <string-array name="tag_endulzante">
        <item>CALORICO</item>
        <item>NOCALORICO</item>
    </string-array>
    <string-array name="granos">
        <item>ESCOGER</item>
        <item>entero</item>
        <item>parvolizado</item>
        <item>refinado</item>
    </string-array>
    <string-array name="tag_granos">
        <item>ENTERO</item>
        <item>PARVOLIZADO</item>
        <item>REFINADO</item>
    </string-array>
    <string-array name="snack">
        <item>ESCOGER</item>
        <item>frito</item>
        <item>horneado</item>
    </string-array>
    <string-array name="tag_snack">
        <item>FRITO</item>
        <item>HORNEADO</item>
    </string-array>
    <string-array name="carnes">
        <item>ESCOGER</item>
        <item>conserva</item>
        <item>fresca</item>
        <item>madurada</item>
    </string-array>
    <string-array name="tag_carnes">
        <item>CONSERVA</item>
        <item>FRESCA</item>
        <item>MADURADA</item>
    </string-array>
    <string-array name="embutidos">
        <item>ESCOGER</item>
        <item>conserva</item>
        <item>madurado</item>
        <item>otro</item>
    </string-array>
    <string-array name="tag_embutidos">
        <item>CONSERVA</item>
        <item>MADURADO</item>
        <item>OTRO</item>
    </string-array>
    <string-array name="secos_sub1">
        <item>ESCOGER</item>
        <item>conserva</item>
        <item>fresco</item>
    </string-array>
    <string-array name="tag_secos_sub1">
        <item>CONSERVA</item>
        <item>FRESCO</item>
    </string-array>
    <string-array name="quesos">
        <item>ESCOGER</item>
        <item>fresco</item>
        <item>madurado</item>
    </string-array>
    <string-array name="tag_quesos">
        <item>FRESCO</item>
        <item>MADURADO</item>
    </string-array>
    <string-array name="secos_sub2">
        <item>ESCOGER</item>
        <item>conserva</item>
        <item>fresco</item>
        <item>listo</item>
    </string-array>
    <string-array name="tag_secos_sub2">
        <item>CONSERVA</item>
        <item>FRESCO</item>
        <item>LISTO</item>
    </string-array>
    <string-array name="lacteos">
        <item>ESCOGER</item>
        <item>entera</item>
        <item>descremada</item>
        <item>semidescremeda</item>
    </string-array>
    <string-array name="tag_lacteos">
        <item>ENTERA</item>
        <item>DESCREMADA</item>
        <item>SEMIDESCREMADA</item>
    </string-array>
    <string-array name="lacteos_sub1">
        <item>ESCOGER</item>
        <item>con lactosa</item>
        <item>sin lactosa</item>
    </string-array>
    <string-array name="tag_lacteos_sub1">
        <item>CONLACTOSA</item>
        <item>SINLACTOSA</item>
    </string-array>
    <string-array name="gramaje">
        <item>ESCOGER</item>
        <item>mGr</item>
        <item>Gr</item>
        <item>Kg</item>
        <item>mLt</item>
        <item>Lt</item>
        <item>Oz</item>
    </string-array>
    <string-array name="producto">
        <item>ESCOGER</item>
        <item>Importado</item>
        <item>Nacional</item>
    </string-array>
    <string-array name="sabor">
        <item>ESCOGER</item>
        <item>Dulce</item>
        <item>Salado</item>
        <item>Neutro</item>
    </string-array>
</resources>