<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        android:id="@+id/llM_item_1"
        style="@style/linear_values_3"
        >
        <TextView
            style="@style/table_textBox1"
            android:text="@string/item_1"
            />
        <EditText
            android:inputType="textMultiLine|text"
            android:id="@+id/et_item_1"
            style="@style/table_textBox2"
            android:hint="@string/value"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llM_item_2"
        style="@style/linear_values_3"
        >
        <TextView
            style="@style/table_textBox1"
            android:text="@string/item_2"
            />
        <EditText
            android:id="@+id/et_item_2"
            style="@style/table_textBox2"
            android:hint="@string/value"
            android:inputType="textPersonName"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llM_item_3"
        style="@style/linear_values_3"
        >
        <TextView
            style="@style/table_textBox1"
            android:text="@string/item_3"
            />
        <EditText
            android:id="@+id/tv_item_3"
            style="@style/table_textBox2"
            android:hint="@string/value"
            android:inputType="numberDecimal"
            />
        <Spinner
            android:id="@+id/spn_item_3_1"
            style="@style/spn_txtBox2"
            android:entries="@array/gramaje"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llM_item_4"
        style="@style/linear_values_3"
        >
        <TextView
            style="@style/table_textBox1"
            android:text="@string/item_4"
            />
        <EditText
            android:inputType="phone"
            android:id="@+id/et_item_4"
            style="@style/table_textBox2"
            android:hint="@string/value"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llM_item_5"
        style="@style/linear_values_3"
        >
        <TextView
            style="@style/table_textBox1"
            android:text="@string/item_5"
            />
        <Spinner
            android:id="@+id/spn_item_5"
            style="@style/spn_txtBox2"
            android:entries="@array/producto"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llM_item_6"
        style="@style/linear_values_3"
        >
        <TextView
            style="@style/table_textBox1"
            android:text="@string/item_6"
            />
        <Spinner
            android:id="@+id/spn_item_6"
            style="@style/spn_txtBox2"
            android:entries="@array/empaque"
            />
    </LinearLayout>

</LinearLayout>