<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apps.reina.juddy.bffyadmin.actividades.ver"
    android:background="@color/verde_azul"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="@dimen/image"
            android:layout_height="@dimen/image"
            android:layout_gravity="center"
            android:src="@drawable/buscar_oscuro"
            android:layout_marginTop="@dimen/linear_margen"
            android:layout_marginBottom="@dimen/linear_margen"
            android:contentDescription="@string/look"
            />

        <Spinner
            android:id="@+id/spnSEE_catgeoria_1"
            style="@style/spn_values1"
            android:entries="@array/categoria1"
            >
        </Spinner>

        <Spinner
            android:id="@+id/spnSEE_catgeoria_2"
            style="@style/spn_values1"
            android:entries="@array/categoria2"
            android:visibility="gone"
            >
        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            >
            <EditText
                android:visibility="gone"
                android:id="@+id/etSEE_nombre"
                style="@style/spn_values2"
                android:hint="@string/name_pro"
                android:textColorHint="@color/verde_oscuro"
                android:textColor="@color/azul_oscuro"
                android:layout_weight="2"
                />

            <ImageButton
                android:id="@+id/check_nombre"
                android:visibility="gone"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_check_dark"
                android:contentDescription="@string/campo_vacio"
                android:background="@drawable/backgroun_circle"
                />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_espera_ver"
            style="@style/table_textBox1"
            android:text="@string/item_wait"
            android:visibility="gone"
            />


        <LinearLayout
            android:id="@+id/ll_ver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/ver_tabla_general" >
            </include>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/ver_item" >
            </include>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                layout="@layout/ver_image_item" >
            </include>

        </LinearLayout>


    </LinearLayout>


</ScrollView>