<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apps.reina.juddy.bffyadmin.actividades.eliminar"
    android:background="@color/verde_azul"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="@dimen/image"
            android:layout_height="@dimen/image"
            android:layout_gravity="center"
            android:src="@drawable/eliminar_oscuro"
            android:layout_marginTop="@dimen/linear_margen"
            android:layout_marginBottom="@dimen/linear_margen"
            android:contentDescription="@string/campo_vacio"
            />

        <Spinner
            android:id="@+id/spnDEL_catgeoria_1"
            style="@style/spn_values1"
            android:entries="@array/categoria1"
            >
        </Spinner>

        <Spinner
            android:id="@+id/spnDEL_catgeoria_2"
            style="@style/spn_values1"
            android:entries="@array/categoria2"
            android:visibility="gone"
            >
        </Spinner>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            >
            <EditText
                android:id="@+id/etDEL_nombre"
                style="@style/spn_values1"
                android:hint="@string/name_pro"
                android:textColorHint="@color/verde_oscuro"
                android:textColor="@color/azul_oscuro"
                android:visibility="gone"
                />

            <ImageButton
                android:id="@+id/check_nombre_del"
                android:visibility="gone"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_check_dark"
                android:contentDescription="@string/campo_vacio"
                android:background="@drawable/backgroun_circle"
                />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_espera_del"
            android:visibility="gone"
            android:minHeight="50dp"
            android:maxHeight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="100"
            android:progress="5"
            android:progressDrawable="@drawable/progress_view_circle"
            android:background="@drawable/progress_circle_shape"
            android:indeterminate="false"

            />

        <LinearLayout
            android:id="@+id/ll_eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/ver_tabla_general" >
            </include>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/ver_item" >
            </include>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                layout="@layout/ver_image_item" >
            </include>

        </LinearLayout>

        <Button
            android:layout_width="@dimen/btn_width_1"
            android:layout_height="@dimen/btn_heigh_1"
            style="@style/btn_textBox"
            android:text="@string/delete"
            android:background="@drawable/backgroun_rect2"
            android:layout_marginTop="5dp"
            android:id="@+id/btnDEL_eliminar"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/linear_margen4"
            />

    </LinearLayout>


</ScrollView>